<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/userName"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="80dp"
        android:text="@string/userName"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/email"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:text="@string/address"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/logout"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="5dp"
        android:text="@string/logoutText"
        android:textColor="#EC407A"
        android:textSize="14sp" />

    <fragment xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="380dp"
        android:layout_height="440dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="17dp"
        tools:context=".MapsActivity" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/addLocation"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/addButtonText"
            android:scaleType="fitCenter"
            android:src="@drawable/addbutton" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_marginTop="12dp"
            android:text="@string/addButtonTextDesc"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>
